# secretsweep

./: .gitignore  Cargo.toml  LICENSE  README.md  action.yml  secretsweep  setup.py
.github/workflows/: build.yml  publish.yml  secretsweep.yml
python/: setup.cfg
python/secretsweep/: __init__.py
secretsweep/: __main__.py
src/: main.rs
