[package]
name = "secretsweep"
version = "2.0.0"
edition = "2021"
description = "Find leaked secrets before they leak. Fast. Written in Rust."
license = "MIT"
repository = "https://github.com/sn01mukangai/secretsweep"
keywords = ["security", "secrets", "scanner", "devsecops", "ci"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "secretsweep"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
atty = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
