[metadata]
name = secretsweep
version = 1.0.0
description = Find leaked secrets before they leak. Fast, focused, developer-friendly.
long_description = file: README.md
long_description_content_type = text/markdown
author = CipherShield
author_email = security@ciphershield.co.ke
url = https://github.com/sn01mukangai/secretsweep
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    secretsweep = secretsweep:main
